--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,6 @@ api_hash =
 [commas]
 key =
 secret =
-account_id =
 
 [dcabot]
 name = '3CQSBOT'
@@ -25,3 +24,6 @@ market = USDT|BUSD|...
 max_deals =
 trade_mode = paper|real
 exchange = Binance|Paper trading account|...
+symrank_limit = 10000
+volatility_limit = 10000
+price_action_limit = 10000
