updated documentation and fixed max deals attributes

--- a/config.ini
+++ b/config.ini
@@ -15,15 +15,15 @@ os =
 ss =
 sos =
 mad =
+max =
 mstc =
 sdsp =
-single = true|false
+single = true
 
 [trading]
-market = USDT|BUSD|...
-max_deals =
-trade_mode = paper|real
-exchange = Binance|Paper trading account|...
+market = USDT
+trade_mode = paper
+exchange = Paper trading account
 symrank_limit = 10000
 volatility_limit = 10000
 price_action_limit = 10000
