multiple fixes, limit pair possibility

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [telegram]
 api_id =
 api_hash =
-sessionfile = tgsession
+sessionfile = session/anon
+# on Windows use the id 5011413076
+chatroom = 3C Quick Stats
 
 [commas]
 key =
@@ -30,6 +32,7 @@ symrank_limit = 10000
 volatility_limit = 10000
 price_action_limit = 10000
 deal_mode = signal
+limit_initial_pairs = false
 # Binance only
 trailing = false
 trailing_deviation = 0.2
