revert Windows fixes

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,7 @@
 [telegram]
 api_id =
 api_hash =
-sessionfile = session/anon
-# on Windows use the id 5011413076
+sessionfile = tgsession
 chatroom = 3C Quick Stats
 
 [commas]
