added btc_pulse, topcoin filter and bugfixes

--- a/config.ini
+++ b/config.ini
@@ -10,18 +10,20 @@ secret =
 
 [dcabot]
 prefix = 3CQSBOT
-tp =
-bo =
-so =
-os =
-ss =
-sos =
-mad =
-max =
-mstc =
-sdsp =
-single = true
-btc_min_vol =
+subprefix = MULTI
+suffix = TA_SAFE
+tp = 1.5
+bo = 11
+so = 11
+os = 1.05
+ss = 1
+sos = 2.4
+mad = 3
+max = 1
+mstc = 25
+sdsp = 1
+single = false
+btc_min_vol = 100
 
 [trading]
 market = USDT
@@ -30,8 +32,10 @@ exchange = Paper trading account
 symrank_limit = 10000
 volatility_limit = 10000
 price_action_limit = 10000
-deal_mode = signal
+topcoin_limit = 10000
+deal_mode = rsi
 limit_initial_pairs = false
+btc_pulse = false
 # Binance only
 trailing = false
 trailing_deviation = 0.2
