fixed issue #2 and issue #7, added BTC pulse description

--- a/config.ini
+++ b/config.ini
@@ -32,10 +32,12 @@ exchange = Paper trading account
 symrank_limit = 10000
 volatility_limit = 10000
 price_action_limit = 10000
-topcoin_limit = 10000
+# not more then 3500
+topcoin_limit = 3500
 deal_mode = rsi
 limit_initial_pairs = false
 btc_pulse = false
+delete_single_bots = false
 # Binance only
 trailing = false
 trailing_deviation = 0.2
