Created structure in the project * Moved helpers to separate folder, so it's clear the 3cqsbot.py is the only executable py file * Moved config to separate folder, so it's possible to load it in a docker image from external volume * Updated README

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,12 @@
 [telegram]
-api_id =
-api_hash =
+api_id = EnterIdHere
+api_hash = EnterHashHere
 sessionfile = tgsession
 chatroom = 3C Quick Stats
 
 [commas]
-key =
-secret =
+key = EnterKeyHere
+secret = EnterSecretHere
 
 [dcabot]
 prefix = 3CQSBOT
