solved #3, #4, #6, #8, removed repetitive symrank calls

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,15 @@
 [telegram]
 api_id =
 api_hash =
-sessionfile = tgsession
+sessionfile = session/anon
 chatroom = 3C Quick Stats
 
 [commas]
 key =
 secret =
+timeout = 3
+retries = 5
+delay_between_retries = 2.0
 
 [dcabot]
 prefix = 3CQSBOT
@@ -29,15 +32,19 @@ btc_min_vol = 100
 market = USDT
 trade_mode = paper
 exchange = Paper trading account
+delete_single_bots = false
+# Binance only
+trailing = false
+trailing_deviation = 0.2
+
+[filter]
 symrank_limit = 10000
 volatility_limit = 10000
 price_action_limit = 10000
 # not more then 3500
 topcoin_limit = 3500
-deal_mode = rsi
 limit_initial_pairs = false
+# RSI-7 < 100 (means asap)
+deal_mode = [{"options": {"time": "3m", "points": "100"}, "strategy": "rsi"}]
 btc_pulse = false
-delete_single_bots = false
-# Binance only
-trailing = false
-trailing_deviation = 0.2
+token_denylist = [BTC_USDT, ETH_USDT, BUSD_USDT, USDC_USDT, USDT_USDT]
