fix wrong denylist example for usdt

--- a/config.ini
+++ b/config.ini
@@ -47,4 +47,4 @@ limit_initial_pairs = false
 # RSI-7 < 100 (means asap)
 deal_mode = [{"options": {"time": "3m", "points": "100"}, "strategy": "rsi"}]
 btc_pulse = false
-token_denylist = [BTC_USDT, ETH_USDT, BUSD_USDT, USDC_USDT, USDT_USDT]
+token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
