switch from Exchange configuration to Account name configuration for multiple account support

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ DCABOT_BTC_MIN_VOL=300
 MARKET=USDT
 MAX=1
 TRADE_MODE=paper
-EXCHANGE=Paper trading account
+ACCOUNT=Paper trading 123456
 SYMRANK_LIMIT=10000
 VOLATILITY_LIMIT=10000
 PRICE_ACTION_LIMIT=10000
