implement min/max values for filter

--- a/.env.example
+++ b/.env.example
@@ -36,9 +36,12 @@ MARKET=USDT
 MAX=1
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
-SYMRANK_LIMIT=10000
-VOLATILITY_LIMIT=10000
-PRICE_ACTION_LIMIT=10000
+SYMRANK_LIMIT_MIN=1
+SYMRANK_LIMIT_MAX=10000
+VOLATILITY_LIMIT_MIN=1
+VOLATILITY_LIMIT_MAX=10000
+PRICE_ACTION_LIMIT_MIN=1
+PRICE_ACTION_LIMIT_MAX=10000
 TOPCOIN_LIMIT=100
 DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
 # Binance only
