--- a/config.ini.example
+++ b/config.ini.example
@@ -24,11 +24,12 @@ so = 11
 os = 1.05
 ss = 1
 sos = 2.4
-mad = 3
+mad = 1
 max = 1
 mstc = 25
 sdsp = 1
 single = false
+single_count = 3
 btc_min_vol = 100
 
 [trading]
