--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ DCABOT_OS=1.4
 DCABOT_SS=1.22
 DCABOT_SOS=3
 DCABOT_MAD=3
+DCABOT_MAX=1
 DCABOT_MSTC=7
 DCABOT_SDSP=1
 DCABOT_SINGLE=true
@@ -34,7 +35,6 @@ DCABOT_BTC_MIN_VOL=300
 # TRADING
 ########################################
 MARKET=USDT
-MAX=1
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
 SYMRANK_LIMIT_MIN=1
