--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # General
 ########################################
 DEBUG=false
+LOGFILE=false
+LOGFILEPATH=3cqbsbot.log
+LOGFILESIZE=200000
+LOGFILECOUNT=5
 
 # Telegram
 ########################################
@@ -12,6 +16,9 @@ TG_SESSIONFILE=session/tgsession
 ########################################
 API_KEY=
 API_SECRET=
+API_TIMEOUT=3
+API_RETRIES=5
+API_RETRY_DELAY=2.0
 
 # DCABOT
 ########################################
@@ -37,6 +44,14 @@ DCABOT_BTC_MIN_VOL=300
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
+DELETE_SINGLE=false
+UPDATE_SINGLE=true
+# Binance only
+TRAILING=true
+TRAILING_DEVIATION=0.2
+
+# FILTER
+#########################################
 SYMRANK_LIMIT_MIN=1
 SYMRANK_LIMIT_MAX=10000
 VOLATILITY_LIMIT_MIN=1
@@ -45,12 +60,6 @@ PRICE_ACTION_LIMIT_MIN=1
 PRICE_ACTION_LIMIT_MAX=10000
 TOPCOIN_LIMIT=100
 DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
-# Binance only
-TRAILING=true
-TRAILING_DEVIATION=0.2
-
-# FILTER
-#########################################
 LIMIT_INIT_PAIRS=false
 BTC_PULSE=false
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
