--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,9 @@ PRICE_ACTION_LIMIT_MIN=1
 PRICE_ACTION_LIMIT_MAX=10000
 TOPCOIN_LIMIT=100
 TOPCOIN_VOLUME=300
+TOPCOIN_EXCHANGE=binance
 DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
 LIMIT_INIT_PAIRS=false
+RANDOM_PAIR=false
 BTC_PULSE=false
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
