--- a/config.ini.example
+++ b/config.ini.example
@@ -54,9 +54,11 @@ volatility_limit_max = 10000
 price_action_limit_min = 1
 price_action_limit_max = 10000
 # not more then 3500
-topcoin_volume = 100
+topcoin_volume = 0
 topcoin_limit = 3500
+topcoin_exchange = binance
 limit_initial_pairs = false
+random_pair = false
 # RSI-7 < 100 (means asap)
 # single strategy
 deal_mode = [{"options": {"time": "3m", "points": "100"}, "strategy": "rsi"}]
