implement new 3CQS signals and prepare for version 2

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,7 @@ TRAILING_DEVIATION=0.2
 
 # FILTER
 #########################################
+SYMRANK_SIGNAL=SymRank Top 100 Triple Tracker
 SYMRANK_LIMIT_MIN=1
 SYMRANK_LIMIT_MAX=10000
 VOLATILITY_LIMIT_MIN=1
