--- a/config.ini.example
+++ b/config.ini.example
@@ -66,4 +66,6 @@ deal_mode = [{"options": {"time": "3m", "points": "100"}, "strategy": "rsi"}]
 # multiple strategies 
 #deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]
 btc_pulse = false
+# ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
+ext_botswitch = false
 token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
