add missing information about extbot_switch

--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,5 @@ DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="tr
 LIMIT_INIT_PAIRS=false
 RANDOM_PAIR=false
 BTC_PULSE=false
+EXT_BOTSWITCH=false
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
