refactored configuration framework, enabled volume logging for topcoin

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ API_SECRET=
 API_TIMEOUT=3
 API_RETRIES=5
 API_RETRY_DELAY=2.0
+SYS_BOT_VALUE=300
 
 # DCABOT
 ########################################
