--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
 # General
 ########################################
 DEBUG=false
-LOGFILE=false
-LOGFILEPATH=3cqbsbot.log
-LOGFILESIZE=200000
-LOGFILECOUNT=5
+#LOGFILE=false
+#LOGFILEPATH=3cqbsbot.log
+#LOGFILESIZE=200000
+#LOGFILECOUNT=5
 
 # Telegram
 ########################################
 TG_ID=
 TG_HASH=
-TG_SESSIONFILE=session/tgsession
+#TG_SESSIONFILE=session/tgsession
 
 # 3Commas
 ########################################
 API_KEY=
 API_SECRET=
-API_TIMEOUT=3
-API_RETRIES=5
-API_RETRY_DELAY=2.0
-SYS_BOT_VALUE=300
+#API_TIMEOUT=3
+#API_RETRIES=5
+#API_RETRY_DELAY=2.0
+#SYS_BOT_VALUE=300
 
 # DCABOT
 ########################################
@@ -38,34 +38,34 @@ DCABOT_MSTC=7
 DCABOT_SDSP=1
 DCABOT_SINGLE=true
 DCABOT_SINGLE_COUNT=1
-DCABOT_BTC_MIN_VOL=300
+#DCABOT_BTC_MIN_VOL=300
 
 # TRADING
 ########################################
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
-DELETE_SINGLE=false
-UPDATE_SINGLE=true
+#DELETE_SINGLE=false
+#UPDATE_SINGLE=true
 # Binance only
-TRAILING=true
-TRAILING_DEVIATION=0.2
+#TRAILING=false
+#TRAILING_DEVIATION=0.2
 
 # FILTER
 #########################################
-SYMRANK_SIGNAL=old
-SYMRANK_LIMIT_MIN=1
-SYMRANK_LIMIT_MAX=10000
-VOLATILITY_LIMIT_MIN=1
-VOLATILITY_LIMIT_MAX=10000
-PRICE_ACTION_LIMIT_MIN=1
-PRICE_ACTION_LIMIT_MAX=10000
-TOPCOIN_LIMIT=100
-TOPCOIN_VOLUME=300
-TOPCOIN_EXCHANGE=binance
-DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
-LIMIT_INIT_PAIRS=false
-RANDOM_PAIR=false
-BTC_PULSE=false
-EXT_BOTSWITCH=false
+SYMRANK_SIGNAL=triple100
+#SYMRANK_LIMIT_MIN=1
+#SYMRANK_LIMIT_MAX=10000
+#VOLATILITY_LIMIT_MIN=1
+#VOLATILITY_LIMIT_MAX=10000
+#PRICE_ACTION_LIMIT_MIN=1
+#PRICE_ACTION_LIMIT_MAX=10000
+#TOPCOIN_LIMIT=100
+#TOPCOIN_VOLUME=300
+#TOPCOIN_EXCHANGE=binance
+#DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
+#LIMIT_INIT_PAIRS=false
+#RANDOM_PAIR=false
+#BTC_PULSE=false
+#EXT_BOTSWITCH=false
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
