--- a/config.ini.example
+++ b/config.ini.example
@@ -1,23 +1,23 @@
 [general]
 debug = false
-log_to_file = false
-log_file_path = 3cqsbot.log
-log_file_size = 200000
-log_file_count = 5
+#log_to_file = false
+#log_file_path = 3cqsbot.log
+#log_file_size = 200000
+#log_file_count = 5
 
 [telegram]
-api_id =
-api_hash =
-sessionfile = tgsession
-chatroom = 3C Quick Stats
+api_id = "Your api id from Telegram here - without Quotes"
+api_hash = "Your api hash from Telegram here - without Quotes"
+#sessionfile = tgsession
+#chatroom = 3C Quick Stats
 
 [commas]
-key =
-secret =
-timeout = 3
-retries = 5
-delay_between_retries = 2.0
-system_bot_value = 300
+key = "Your api key from 3Commas here - without Quotes"
+secret = "Your secret from 3Commas here - without Quotes"
+#timeout = 3
+#retries = 5
+#delay_between_retries = 2.0
+#system_bot_value = 300
 
 [dcabot]
 prefix = 3CQSBOT
@@ -35,38 +35,40 @@ mstc = 25
 sdsp = 1
 single = false
 single_count = 3
-btc_min_vol = 100
+#btc_min_vol = 100
 
 [trading]
 market = USDT
 trade_mode = paper
-account_name = Paper Account 1064454
-delete_single_bots = false
-singlebot_update = true
+account_name = "Your paper account here - without quotes"
+#delete_single_bots = false
+#singlebot_update = true
 # Binance only
-trailing = false
-trailing_deviation = 0.2
+#trailing = false
+#trailing_deviation = 0.2
 
 [filter]
-symrank_signal = old
-symrank_limit_min = 1
-symrank_limit_max = 10000
-volatility_limit_min = 1
-volatility_limit_max = 10000
-price_action_limit_min = 1
-price_action_limit_max = 10000
-topcoin_volume = 0
+symrank_signal = triple100
+#symrank_limit_min = 1
+#symrank_limit_max = 100
+#volatility_limit_min = 0.1
+#volatility_limit_max = 100
+#price_action_limit_min = 0.1
+#price_action_limit_max = 100
+# warning to not use this attribute for large bots!
+# to not set it to 0
+# topcoin_volume = 300
 # not more then 3500
-topcoin_limit = 3500
-topcoin_exchange = binance
-limit_initial_pairs = false
-random_pair = true
+#topcoin_limit = 3500
+#topcoin_exchange = binance
+#limit_initial_pairs = false
+#random_pair = true
 # RSI-7 < 100 (means asap)
 # single strategy
-deal_mode = [{"options": {"time": "3m", "points": "100"}, "strategy": "rsi"}]
+#deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
 # multiple strategies 
-#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]
-btc_pulse = false
+#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
+#btc_pulse = false
 # ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
-ext_botswitch = false
+#ext_botswitch = false
 token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
