create different examples and update the documentation

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -8,14 +8,15 @@ DEBUG=false
 
 # Telegram
 ########################################
-TG_ID=
-TG_HASH=
+TG_ID="Your api id from Telegram here - without Quotes"
+TG_HASH="Your api hash from Telegram here - without Quotes"
 #TG_SESSIONFILE=session/tgsession
+#CHATROOM=3C Quick Stats
 
 # 3Commas
 ########################################
-API_KEY=
-API_SECRET=
+API_KEY="Your api key from 3Commas here - without Quotes"
+API_SECRET="Your secret from 3Commas here - without Quotes"
 #API_TIMEOUT=3
 #API_RETRIES=5
 #API_RETRY_DELAY=2.0
@@ -24,7 +25,7 @@ API_SECRET=
 # DCABOT
 ########################################
 DCABOT_PREFIX=3CQSBOT
-DCABOT_SUBPREFIX=SINGLE
+DCABOT_SUBPREFIX=MULTI
 DCABOT_SUFFIX=TA_Lite_v2.0
 DCABOT_TP=2.0
 DCABOT_BO=50
@@ -32,7 +33,7 @@ DCABOT_SO=10
 DCABOT_OS=1.4
 DCABOT_SS=1.22
 DCABOT_SOS=3
-DCABOT_MAD=3
+DCABOT_MAD=2
 DCABOT_MAX=1
 DCABOT_MSTC=7
 DCABOT_SDSP=1
@@ -63,7 +64,7 @@ SYMRANK_SIGNAL=triple100
 #TOPCOIN_LIMIT=100
 #TOPCOIN_VOLUME=300
 #TOPCOIN_EXCHANGE=binance
-#DEAL_MODE='[{"options"={"time"="5m", "type"="buy_or_strong_buy"}, "strategy"="trading_view"},{"options":{"time":"15m","points":70},"strategy":"rsi"},{"options":{"time":"1h","points":70},"strategy":"rsi"},{"options":{"time":"4h","points":70},"strategy":"rsi"}]'
+DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 #LIMIT_INIT_PAIRS=false
 #RANDOM_PAIR=false
 #BTC_PULSE=false
