--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -34,7 +34,7 @@ max = 1
 mstc = 25
 sdsp = 1
 single = false
-single_count = 3
+single_count = 1
 #btc_min_vol = 100
 
 [trading]
@@ -65,7 +65,7 @@ symrank_signal = triple100
 #random_pair = true
 # RSI-7 < 100 (means asap)
 # single strategy
-#deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
+deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
 # multiple strategies 
 #deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 #btc_pulse = false
