add mandatory attribute to multibot example, solve issue #34

--- a/examples/.env.multi-minimal.example
+++ b/examples/.env.multi-minimal.example
@@ -27,6 +27,7 @@ DCABOT_MAD=2
 DCABOT_MAX=1
 DCABOT_MSTC=7
 DCABOT_SDSP=1
+DCABOT_SINGLE=false
 
 # TRADING
 ########################################
