enable futures trading

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -51,6 +51,15 @@ ACCOUNT=Paper trading 123456
 # Binance only
 #TRAILING=false
 #TRAILING_DEVIATION=0.2
+# Futures trading only
+TRADE_FUTURE=false
+LEVERAGE_TYPE=cross
+LEVERAGE_VALUE=2
+STOP_LOSS_PERCENT=1
+STOP_LOSS_TYPE=stop_loss_and_disable_bot
+STOP_LOSS_TIMEOUT_ENABLED=false
+STOP_LOSS_TIMEOUT_SECONDS=5
+
 
 # FILTER
 #########################################
