--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -46,6 +46,14 @@ account_name = "Your paper account here - without quotes"
 # Binance only
 #trailing = false
 #trailing_deviation = 0.2
+# Futures trading only
+trade_future = false
+leverage_type = cross
+leverage_value = 2
+stop_loss_percent = 1
+stop_loss_type = stop_loss_and_disable_bot
+stop_loss_timeout_enabled = false
+stop_loss_timeout_seconds = 5
 
 [filter]
 symrank_signal = triple100
