Add cooldown and disable after deals count support

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -40,6 +40,8 @@ DCABOT_SDSP=1
 DCABOT_SINGLE=true
 DCABOT_SINGLE_COUNT=1
 #DCABOT_BTC_MIN_VOL=300
+#DCABOT_COOLDOWN=30
+#DCABOT_DEALS_COUNT=1
 
 # TRADING
 ########################################
