--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -20,34 +20,32 @@ secret = "Your secret from 3Commas here - without Quotes"
 #system_bot_value = 300
 
 [dcabot]
+single = false
+single_count = 1
 prefix = 3CQSBOT
 subprefix = MULTI
 suffix = TA_SAFE
+mad = 1
+# RSI-7 < 100 (means asap)
+# single strategy
+deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
+# multiple strategies 
+#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 tp = 1.5
+# Binance only
+#trailing = false
+#trailing_deviation = 0.2
 bo = 11
 so = 11
 os = 1.05
 ss = 1
 sos = 2.4
-mad = 1
-max = 1
 mstc = 25
+max = 1
 sdsp = 1
-single = false
-single_count = 1
 #btc_min_vol = 100
 #cooldown = 30
 #deals_count = 1
-
-[trading]
-market = USDT
-trade_mode = paper
-account_name = "Your paper account here - without quotes"
-#delete_single_bots = false
-#singlebot_update = true
-# Binance only
-#trailing = false
-#trailing_deviation = 0.2
 # Futures trading only
 trade_future = false
 leverage_type = cross
@@ -57,6 +55,28 @@ stop_loss_type = stop_loss_and_disable_bot
 stop_loss_timeout_enabled = false
 stop_loss_timeout_seconds = 5
 
+#[fgi_aggressive]
+#fgi_min = 61
+#fgi_max = 100
+# mandatory settings like [dcabot]
+
+#[fgi_moderate]
+#fgi_min = 31
+#fgi_max = 60
+# mandatory settings like [dcabot]
+
+#[fgi_defensive]
+#fgi_min = 0
+#fgi_max = 30
+# mandatory settings like [dcabot]
+
+[trading]
+market = USDT
+trade_mode = paper
+account_name = "Your paper account here - without quotes"
+#delete_single_bots = false
+#singlebot_update = true
+
 [filter]
 symrank_signal = triple100
 #symrank_limit_min = 1
@@ -65,20 +85,19 @@ symrank_signal = triple100
 #volatility_limit_max = 100
 #price_action_limit_min = 0.1
 #price_action_limit_max = 100
+#topcoin_filter = true
 # warning to not use this attribute for large bots!
-# to not set it to 0
-# topcoin_volume = 300
-# not more then 3500
+# set it to 0 if you want to disable it
+#topcoin_volume = 300
+# not more then 3500 coins
 #topcoin_limit = 3500
 #topcoin_exchange = binance
 #limit_initial_pairs = false
 #random_pair = true
-# RSI-7 < 100 (means asap)
-# single strategy
-deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
-# multiple strategies 
-#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
+# Use different DCA settings according to FGI, define DCA settings under [fgi_aggressive], [fgi_moderate] and [fgi_defensive]
+#fearandgreed = false
 #btc_pulse = false
 # ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
 #ext_botswitch = false
-token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
+# additional token denylist (blacklist of 3commas is used by default)
+#token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
