Updates FGI and documentation

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -24,12 +24,11 @@ API_SECRET="Your secret from 3Commas here - without Quotes"
 
 # DCABOT
 ########################################
-DCABOT_SINGLE=true
-DCABOT_SINGLE_COUNT=1
+#DCABOT_BOTID=1234567
 DCABOT_PREFIX=3CQSBOT
 DCABOT_SUBPREFIX=MULTI
 DCABOT_SUFFIX=TA_Lite_v2.0
-DCABOT_MAD=2
+DCABOT_MAD=10
 DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 DCABOT_TP=2.0
 # Binance only
@@ -60,6 +59,8 @@ STOP_LOSS_TIMEOUT_SECONDS=5
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
+DCABOT_SINGLE=true
+DCABOT_SINGLE_COUNT=1
 #DELETE_SINGLE=false
 #UPDATE_SINGLE=true
 
