Change default setting for dcabot_single

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -59,7 +59,7 @@ STOP_LOSS_TIMEOUT_SECONDS=5
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
-DCABOT_SINGLE=true
+DCABOT_SINGLE=false
 DCABOT_SINGLE_COUNT=1
 #DELETE_SINGLE=false
 #UPDATE_SINGLE=true
