Simultanous logging to file and stdout + bugfix + log improvements

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -28,7 +28,7 @@ API_SECRET="Your secret from 3Commas here - without Quotes"
 DCABOT_PREFIX=3CQSBOT
 DCABOT_SUBPREFIX=MULTI
 DCABOT_SUFFIX=TA_Lite_v2.0
-DCABOT_MAD=10
+DCABOT_MAD=2
 DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 DCABOT_TP=2.0
 # Binance only
@@ -59,7 +59,7 @@ STOP_LOSS_TIMEOUT_SECONDS=5
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT=Paper trading 123456
-DCABOT_SINGLE=true
+DCABOT_SINGLE=false
 DCABOT_SINGLE_COUNT=1
 #DELETE_SINGLE=false
 #UPDATE_SINGLE=true
