--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -73,7 +73,7 @@ SYMRANK_SIGNAL=triple100
 #VOLATILITY_LIMIT_MAX=10000
 #PRICE_ACTION_LIMIT_MIN=1
 #PRICE_ACTION_LIMIT_MAX=10000
-#TOPCOIN_FILTER: false
+#TOPCOIN_FILTER=false
 #TOPCOIN_LIMIT=100
 #TOPCOIN_VOLUME=300
 #TOPCOIN_EXCHANGE=Binance
