README Table minor alignment and update TTP notice

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -31,7 +31,7 @@ DCABOT_SUFFIX=TA_Lite_v2.0
 DCABOT_MAD=2
 DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 DCABOT_TP=2.0
-# Binance only
+# Caution - Not all exchanges support trailing take profit
 #TRAILING=false
 #TRAILING_DEVIATION=0.2
 DCABOT_BO=50
