--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -32,7 +32,7 @@ deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "tr
 # multiple strategies 
 #deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 tp = 1.5
-# Binance only
+# Caution - Not all exchanges support trailing take profit
 #trailing = false
 #trailing_deviation = 0.2
 bo = 11
