Small change in config.ini.full.example

--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -10,8 +10,8 @@ api_id = "Your api id from Telegram here - without Quotes"
 api_hash = "Your api hash from Telegram here - without Quotes"
 #sessionfile = tgsession
 #chatroom = 3C Quick Stats
-notifications = False
-notify-urls = [ "tgram://1234567890:xxxxx/0987654321" ]
+#notifications = False
+#notify-urls = [ "tgram://1234567890:xxxxx/0987654321" ]
 
 [commas]
 key = "Your api key from 3Commas here - without Quotes"
