Change of .env.full.example for TG notification

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -11,7 +11,9 @@ DEBUG=false
 TG_ID="Your api id from Telegram here - without Quotes"
 TG_HASH="Your api hash from Telegram here - without Quotes"
 #TG_SESSIONFILE=session/tgsession
-#CHATROOM=3C Quick Stats
+#CHATROOM=3C Quick Stats#
+#NOTIFICATIONS = False
+#NOTIFY-URLS = [ "tgram://1234567890:xxxxx/0987654321" ]
 
 # 3Commas
 ########################################
