--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -79,6 +79,7 @@ SYMRANK_SIGNAL=triple100
 #TOPCOIN_LIMIT=100
 #TOPCOIN_VOLUME=300
 #TOPCOIN_EXCHANGE=Binance
+#CONTINUOUS_UPDATE=true
 #LIMIT_INIT_PAIRS=false
 #RANDOM_PAIR=false
 #BTC_PULSE=false
