initial commit for ws

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -6,12 +6,11 @@ DEBUG=false
 #LOGFILESIZE=200000
 #LOGFILECOUNT=5
 
-# Telegram
+# Websocket
 ########################################
-TG_ID="Your api id from Telegram here - without Quotes"
-TG_HASH="Your api hash from Telegram here - without Quotes"
-#TG_SESSIONFILE=session/tgsession
-#CHATROOM=3C Quick Stats
+API_VERSION=0.5-beta
+API_KEY="Your api key from 3CQS here - without Quotes"
+API_URL=https://stream.3cqs.com
 
 # 3Commas
 ########################################
