--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-telethon
+apprise
+Babel
+numpy
+portalocker
 py3cw
 pycoingecko
-yfinance
-numpy
+python_dateutil
+pytz
+requests
+Telethon
 tenacity
-portalocker
-Babel
-apprise
+yfinance
