implement socket reconnection attempts

--- a/examples/.env.multi-minimal.example
+++ b/examples/.env.multi-minimal.example
@@ -2,10 +2,13 @@
 ########################################
 DEBUG=false
 
-# Telegram
+# Websocket
 ########################################
-TG_ID="Your api id from Telegram here - without Quotes"
-TG_HASH="Your api hash from Telegram here - without Quotes"
+API_VERSION=0.5-beta
+API_KEY="Your api key from 3CQS here - without Quotes"
+API_URL=https://stream.3cqs.com
+WEBSOCKET_RECONNECT_TIMEOUT=10000
+WEBSOCKET_RECONNECT_ATTEMPTS=5
 
 # 3Commas
 ########################################
