--- a/examples/.env.single-minimal.example
+++ b/examples/.env.single-minimal.example
@@ -7,6 +7,8 @@ DEBUG=false
 API_VERSION=0.5-beta
 API_KEY="Your api key from 3CQS here - without Quotes"
 API_URL=https://stream.3cqs.com
+WEBSOCKET_RECONNECT_TIMEOUT=10000
+WEBSOCKET_RECONNECT_ATTEMPTS=5
 
 # 3Commas
 ########################################
