--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -9,6 +9,8 @@ debug = false
 api_version = 0.5-beta
 api_key = "Your api key from 3CQS here - without Quotes"
 api_url = https://stream.3cqs.com
+reconnection_delay = 10000
+reconnection_attempts = 5
 
 [commas]
 key = "Your api key from 3Commas here - without Quotes"
