--- a/examples/config.ini.multi-minimal.example
+++ b/examples/config.ini.multi-minimal.example
@@ -1,9 +1,13 @@
 [general]
 debug = false
 
-[telegram]
-api_id = "Your api id from Telegram here - without Quotes"
-api_hash = "Your api hash from Telegram here - without Quotes"
+# Websocket
+########################################
+API_VERSION=0.5-beta
+API_KEY="Your api key from 3CQS here - without Quotes"
+API_URL=https://stream.3cqs.com
+WEBSOCKET_RECONNECT_TIMEOUT=10000
+WEBSOCKET_RECONNECT_ATTEMPTS=5
 
 [commas]
 key = "Your api key from 3Commas here - without Quotes"
