--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -1,6 +1,6 @@
 [general]
 timezone = Europe/Amsterdam
-debug = false
+debug = False
 logrotate = 7
 
 [telegram]
@@ -9,6 +9,7 @@ api_hash = "Your api hash from Telegram here - without Quotes"
 #sessionfile = tgsession
 #chatroom = 3C Quick Stats
 #notifications = False
+#extensive_notifications = False
 #notify-urls = [ "tgram://1234567890:xxxxx/0987654321" ]
 
 [commas]
@@ -26,6 +27,9 @@ secret = "Your secret from 3Commas here - without Quotes"
 prefix = 3CQSBOT
 subprefix = MULTI
 suffix = TA_SAFE
+# amount of single bots
+single_count = 10
+# multi bot - max active deals
 mad = 10
 # RSI-7 < 100 (means asap)
 # single strategy
@@ -34,7 +38,7 @@ deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "tr
 #deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 tp = 1.5
 # Caution - Not all exchanges support trailing take profit
-#trailing = false
+#trailing = False
 #trailing_deviation = 0.2
 bo = 11
 so = 11
@@ -67,17 +71,16 @@ sdsp = 1
 market = USDT
 trade_mode = paper
 account_name = "Your paper account here - without quotes"
-single = false
-single_count = 1
-#delete_single_bots = false
-#singlebot_update = true
+single = False
+#delete_single_bots = False
+#singlebot_update = True
 # Futures trading only
-trade_future = false
+trade_future = False
 leverage_type = cross
 leverage_value = 2
 stop_loss_percent = 1
 stop_loss_type = stop_loss_and_disable_bot
-stop_loss_timeout_enabled = false
+stop_loss_timeout_enabled = False
 stop_loss_timeout_seconds = 5
 
 [filter]
@@ -96,18 +99,18 @@ symrank_signal = triple100
 # not more then 3500 coins
 #topcoin_limit = 3500
 #topcoin_exchange = binance
-#continuous_update = true
-#limit_symrank_pairs_to_mad = false
-#random_pair = true
+#continuous_update = True
+#limit_symrank_pairs_to_mad = False
+#random_pair = True
 # Use different DCA settings according to FGI, define DCA settings under [fgi_aggressive], [fgi_moderate] and [fgi_defensive]
-#fearandgreed = false
+#fearandgreed = False
 #fgi_trade_min = 30
 #fgi_trade_max = 100
 #fgi_ema_fast = 9
 #fgi_ema_slow = 50
-#btc_pulse = false
-# ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
-#ext_botswitch = false
+#btc_pulse = False
+# ATTENTION: if ext_botswitch set to True, btc_pulse will be ignored
+#ext_botswitch = False
 # additional token denylist (blacklist of 3commas is used by default)
 #token_denylist = [USDT_BUSD, USDT_USDC]
 #token_whitelist = [USDT_BTC, USDT_ETH]
