--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -8,9 +8,9 @@ DEBUG=false
 
 # Websocket
 ########################################
-API_VERSION=0.5-beta
-API_KEY="Your api key from 3CQS here - without Quotes"
-API_URL=https://stream.3cqs.com
+WEBSOCKET_VERSION=0.5-beta
+WEBSOCKET_KEY="Your api key from 3CQS here - without Quotes"
+WEBSOCKET_URL=https://stream.3cqs.com
 WEBSOCKET_RECONNECT_TIMEOUT=10000
 WEBSOCKET_RECONNECT_ATTEMPTS=5
 
