fix multibot, added fearandgreed condition, support multiple signals

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -62,11 +62,12 @@ STOP_LOSS_PERCENT=1
 STOP_LOSS_TYPE=stop_loss_and_disable_bot
 STOP_LOSS_TIMEOUT_ENABLED=false
 STOP_LOSS_TIMEOUT_SECONDS=5
+DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 
 
 # FILTER
 #########################################
-SYMRANK_SIGNAL=triple100
+SYMRANK_SIGNAL=1
 #SYMRANK_LIMIT_MIN=1
 #SYMRANK_LIMIT_MAX=10000
 #VOLATILITY_LIMIT_MIN=1
@@ -77,9 +78,16 @@ SYMRANK_SIGNAL=triple100
 #TOPCOIN_LIMIT=100
 #TOPCOIN_VOLUME=300
 #TOPCOIN_EXCHANGE=binance
-DEAL_MODE='[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]'
 #LIMIT_INIT_PAIRS=false
 #RANDOM_PAIR=false
+DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
+
+# CONDITIONS
+#########################################
 #BTC_PULSE=false
 #EXT_BOTSWITCH=false
-DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
+FEARANDGREED=false
+FGI_EMA_FAST = 9
+FGI_EMA_SLOW = 50
+FGI_TRADE_MIN = 30
+FGI_TRADE_MAX = 100
