--- a/examples/.env.multi-minimal.example
+++ b/examples/.env.multi-minimal.example
@@ -37,9 +37,9 @@ DCABOT_SINGLE=false
 MARKET=USDT
 TRADE_MODE=paper
 ACCOUNT="Add your papertrading account here"
+DEAL_MODE=[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
 
 # FILTER
 #########################################
-SYMRANK_SIGNAL=triple100
-DEAL_MODE=[{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
+SYMRANK_SIGNAL=1
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
