--- a/examples/.env.single-minimal.example
+++ b/examples/.env.single-minimal.example
@@ -41,5 +41,5 @@ ACCOUNT="Add your papertrading account here"
 
 # FILTER
 #########################################
-SYMRANK_SIGNAL=triple100
+SYMRANK_SIGNAL=1
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
