--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -57,10 +57,14 @@ stop_loss_percent = 1
 stop_loss_type = stop_loss_and_disable_bot
 stop_loss_timeout_enabled = false
 stop_loss_timeout_seconds = 5
+# RSI-7 < 100 (means asap)
+# single strategy
+deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
+# multiple strategies 
+#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 
 [filter]
-# possible symrank_signal: SymRank Top 10, SymRank Top 30, SymRank Top 50, Hyper Volatility, Hyper Volatility Double Tracker, Super Volatility, Super Volatility Double Tracker, Ultra Volatility, X-Treme Volatility, all
-symrank_signal = all
+symrank_signal = 1
 #symrank_limit_min = 1
 #symrank_limit_max = 100
 #volatility_limit_min = 0.1
@@ -77,13 +81,15 @@ symrank_signal = all
 #topcoin_exchange = binance
 #limit_initial_pairs = false
 #random_pair = true
-# RSI-7 < 100 (means asap)
-# single strategy
-deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
-# multiple strategies 
-#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
+token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
+#token_whitelist = [USDT_BTC, USDT_ETH]
+
+[conditions]
 #btc_pulse = false
 # ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
 #ext_botswitch = false
-token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
-#token_whitelist = [USDT_BTC, USDT_ETH]
+#fearandgreed = false
+#fgi_trade_min = 30
+#fgi_trade_max = 100
+#fgi_ema_fast = 9
+#fgi_ema_slow = 50
