--- a/examples/config.ini.multi-minimal.example
+++ b/examples/config.ini.multi-minimal.example
@@ -33,8 +33,8 @@ single = false
 market = USDT
 trade_mode = paper
 account_name = "Your paper account here - without quotes"
+deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
 
 [filter]
-symrank_signal = triple100
-deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
+symrank_signal = 1
 token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
