--- a/examples/config.ini.full.example
+++ b/examples/config.ini.full.example
@@ -61,7 +61,7 @@ stop_loss_timeout_seconds = 5
 # single strategy
 deal_mode = [{"options": {"time": "3m", "points": "100", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"}]
 # multiple strategies 
-#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},{"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},{"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
+#deal_mode = [{"options": {"time": "5m", "type": "buy_or_strong_buy"}, "strategy": "trading_view"},{"options": {"time": "15m", "points": "70", "time_period": "7", "trigger_condition": "less"}, "strategy": "rsi"},"options": {"time": "1h", "points": "70", "time_period": "7", "trigger_condition": "less"},"options": {"time": "4h", "points": "70", "time_period": "7", "trigger_condition": "less"}]
 
 [filter]
 symrank_signal = 1
@@ -79,15 +79,11 @@ symrank_signal = 1
 # not more then 3500
 #topcoin_limit = 3500
 #topcoin_exchange = binance
-#limit_initial_pairs = false
-#random_pair = true
 token_denylist = [USDT_BTC, USDT_ETH, USDT_BUSD, USDT_USDC]
 #token_whitelist = [USDT_BTC, USDT_ETH]
 
 [conditions]
 #btc_pulse = false
-# ATTENTION: if ext_botswitch set to true, btc_pulse will be ignored
-#ext_botswitch = false
 #fearandgreed = false
 #fgi_trade_min = 30
 #fgi_trade_max = 100
