--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -56,6 +56,7 @@ ACCOUNT=Paper trading 123456
 #TRAILING_DEVIATION=0.2
 # Futures trading only
 TRADE_FUTURE=false
+STRATEGY=long
 LEVERAGE_TYPE=cross
 LEVERAGE_VALUE=2
 STOP_LOSS_PERCENT=1
