fix non mandatory attributes

--- a/examples/.env.full.example
+++ b/examples/.env.full.example
@@ -77,7 +77,7 @@ SYMRANK_SIGNAL=1
 #PRICE_ACTION_LIMIT_MAX=10000
 #TOPCOIN_FILTER: false
 #TOPCOIN_LIMIT=100
-#TOPCOIN_VOLUME=300
+#TOPCOIN_VOLUME=3M
 #TOPCOIN_EXCHANGE=binance
 DENYLIST='[USDT_BUSD, USDT_USDC, USDT_TUSD, USDT_UST, USDT_SUSD, USDT_USDP]'
 
